[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-mechanical-core"
version = "0.10.5"
description = "A python wrapper for Ansys Mechanical"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys_api_mechanical==0.1.1",
    "ansys-platform-instancemanagement>=1.0.1",
    "ansys-pythonnet>=3.1.0rc2",
    "ansys-tools-path>=0.3.1",
    "appdirs>=1.4.0",
    "click>=8.1.3", # for CLI interface
    "clr-loader==0.2.6",
    "grpcio>=1.30.0",
    "protobuf>=3.12.2",
    "tqdm>=4.45.0",
    "ansys-mechanical-env>=0.1.0",
]

[project.urls]
Documentation = "https://mechanical.docs.pyansys.com"
Source = "https://github.com/ansys/pymechanical"
Homepage = "https://github.com/ansys/pymechanical"
Tracker = "https://github.com/ansys/pymechanical/issues"

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-print==1.0.0",
]
doc = [
    "Sphinx==7.2.6",
    "ansys-sphinx-theme==0.12.5",
    "grpcio==1.60.0",
    "imageio-ffmpeg==0.4.9",
    "imageio==2.33.1",
    "jupyter_sphinx==0.4.0",
    "jupyterlab>=3.2.8",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "numpydoc==1.6.0",
    "pandas==2.1.4",
    "panel==1.3.4",
    "plotly==5.18.0",
    "pypandoc==1.12",
    "pytest-sphinx==0.5.0",
    "pythreejs==2.4.2",
    "pyvista==0.43.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.25.2",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-gallery==0.15.0",
    "sphinx-notfound-page==1.0.0",
    "sphinxcontrib-websupport==1.2.6",
    "sphinxemoji==0.2.0",
]

[project.scripts]
ansys-mechanical = "ansys.mechanical.core.run:cli"

[tool.flit.module]
name = "ansys.mechanical.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
relative_files = true
source = ["ansys.mechanical"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = """-ra -s -m remote_session_connect --durations=0 --cov=ansys.mechanical --cov-report html:.cov/html \
 --cov-report xml:.cov/xml --cov-report term -vv --print --print-relative-time"""
# addopts = """-ra -s -m remote_session_launch --durations=0 --cov=ansys.mechanical --cov-report html:.cov/html \
# --cov-report xml:.cov/xml --cov-report term -vv --print --print-relative-time"""
# addopts = """-ra -s -m 'remote_session_launch or remote_session_connect' --durations=0 --cov=ansys.mechanical \
# --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --print --print-relative-time"""
# addopts = """-ra -s -m 'remote_session_launch or remote_session_connect or embedding' --durations=0
# --cov=ansys.mechanical --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report \
# term -vv --print --print-relative-time"""
testpaths = [
    "tests",
]
markers = [
    "embedding: tests that embed Mechanical in the python process",
    "python_env: tests that check for an appropriate python environment",
    "remote_session_launch: tests that launch Mechanical and work with gRPC server inside it",
    "remote_session_connect: tests that connect to Mechanical and work with gRPC server inside it",
     "minimum_version(num): tests that run if ansys-version is greater than or equal to the minimum version provided",
]
xfail_strict = true
